--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <script>
         console.log("Hello, World!");
     </script>
+    <!--menu-->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     
 </body>
 </html>
